<resources>
    <string name="app_name">IRMS</string>
    <string name="logSelectLang">SELECT YOUR LANGUAGE</string>
    <string name="logLangBtnTxt">English</string>
    <string name="suName">Username</string>
    <string name="suPassword">Password</string>
    <string name="sign_up">SIGN IN</string>
    <string name="logHelpPt1">Need</string>
    <string name="logHelpPt2">\u0020help?</string>
    <string name="logUser_not_available">User Not Available</string>
    <string name="logNot_auth_user">Not authorized User</string>
    <string name="logHelpDetails"> • Users have to be assigned to their corresponding workshop for a successful sign in \n\n  • Users have to sign in using their assigned POS Machine</string>
    <string name="session_details">Session Details</string>
    <string name="session_id">SESSION ID</string>
    <string name="user_role">WORKER\'S ROLE</string>
    <string name="currently_no_session_allocated">CURRENTLY NO SESSION ALLOCATED</string>
    <string name="retry">RETRY</string>
    <string name="business_info">Business Info</string>
    <string name="business_entity">BUSINESS ENTITY</string>
    <string name="district">DISTRICT</string>
    <string name="region">REGION</string>
    <string name="currency">CURRENCY</string>
    <string name="new_collection">NEW COLLECTION</string>
    <string name="hmAcceptSession">ACCEPT</string>
    <string name="hmSurrenderSession">SURRENDER</string>
    <string name="hmAcceptedDate">ACCEPTED DATE</string>
    <string name="hmAllocatedDate">ALLOCATED DATE</string>
    <string name="bnav_home">Home</string>
    <string name="bnav_collections">Collections</string>
    <string name="bnav_account">Account</string>
    <string name="hmUnableToChangeCurrentSession">Unable to change current session</string>
    <string name="ALERT_OK">OK</string>
    <string name="ALERT_CANCEL">CANCEL</string>
    <string name="alert_logout_confirm_msg">Are you sure you want to logout?</string>
    <string name="alert_change_pass_confirm_msg">Are you sure you want to change password?</string>
    <string name="alert_logout_confirm_title">Log out</string>
    <string name="log_out">Log out</string>
    <string name="other_acc">Other</string>
    <string name="swahili_acc">Swahili</string>
    <string name="english_acc">English</string>
    <string name="change_language_acc">Change Language</string>
    <string name="fa_change_password">Change password</string>
    <string name="cp_current_password">Current password</string>
    <string name="cp_new_password">New password</string>
    <string name="cp_confirm_password">Confirm Password</string>
    <string name="cp_forgotten_your_password">Forgotten your password?</string>
    <string name="cp_passwords_dont_match">Passwords do not match</string>
    <string name="try_again">Unknown Error occured while attempting to changing password.</string>
</resources>