<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:translationZ="99dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">

    <Button
        android:id="@+id/logLangBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logLangBtnTxt"
        android:textColor="@android:color/darker_gray"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@android:color/transparent"
        android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
        android:drawableRight="@drawable/ic_baseline_arrow_drop_down_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginVertical="30dp"
        android:layout_marginHorizontal="10dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingLeft="5dp"
            android:text="@string/suName"/>
        <EditText
            android:id="@+id/logName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:inputType="textNoSuggestions"
            android:maxLines="1" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingLeft="5dp"
            android:text="@string/suPassword"/>
        <EditText
            android:id="@+id/logPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:inputType="textPassword"
            android:maxLines="1" />

        <Button
            android:id="@+id/logSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/disabled_button"
            android:clickable="false"
            android:enabled="false"
            android:layout_marginTop="30dp"
            android:textSize="14sp"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:padding="5dp"
            android:text="@string/cp_forgotten_your_password"/>
    </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/border_dark_grey"
           />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp"
            android:weightSum="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textSize="16sp"
            android:gravity="right"
            android:text="@string/logHelpPt1"/>
        <TextView
            android:id="@+id/logHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_weight="0.5"
            android:textColor="@color/colorPrimary"
            android:text="@string/logHelpPt2"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>