<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="30dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/cp_current_password"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/cp_current_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/cp_new_password"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/cp_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/cp_confirm_password"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/cp_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="16sp" />

        <Button
            android:id="@+id/cp_change_passBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/disabled_button"
            android:clickable="false"
            android:enabled="false"
            android:text="@string/fa_change_password"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/cp_forgotten_your_password"
            android:textSize="14sp" />
    </LinearLayout>
</RelativeLayout>