<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:gravity="center"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBar_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone" />

            <TextView
                android:id="@+id/act_account_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/act_account_workstation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3"

            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/view_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/change_language_acc"
                android:textColor="@android:color/black"
                android:textSize="20dp" />

            <com.lucasurbas.listitemview.ListItemView
                android:id="@+id/set_sw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:liv_multiline="false"
                app:liv_title="@string/swahili_acc" />

            <com.lucasurbas.listitemview.ListItemView
                android:id="@+id/set_en"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:liv_multiline="false"
                app:liv_title="@string/english_acc" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/view_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/other_acc"
                android:textColor="@android:color/black"
                android:textSize="20dp" />

            <com.lucasurbas.listitemview.ListItemView
                android:id="@+id/change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:liv_displayMode="standard"
                app:liv_multiline="false"
                app:liv_title="@string/fa_change_password" />

            <com.lucasurbas.listitemview.ListItemView
                android:id="@+id/log_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:liv_displayMode="standard"
                app:liv_multiline="false"
                app:liv_title="@string/log_out" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>